--- a/index.html
+++ b/index.html
@@ -17,90 +17,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400&display=swap" rel="stylesheet">
 
     <script src="javascript/sidemenu.js"></script>
+    <script src="javascript/init.js"></script>
+    <script src="javascript/columns.js"></script>
     <script defer src="javascript/card.js"></script>
     <script defer src="javascript/modal.js"></script>
     <script defer src="javascript/columns.js"></script>
+    <script defer src="javascript/modaldelete.js"></script>
     <script src="https://kit.fontawesome.com/55809f1341.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="Modal">
-        <div class="ModalAlert">
-            <div class="ModalMessage">선택한 카드를 삭제할까요?</div>
-            <div class="ModalButton"><button class="ModalCancel" onclick="ModalExit()">취소</button><button class="ModalDelete" onclick="CardDelete()">삭제</button></div>
-        </div>
-    </div>
-
     <div class="TitleSection">
         <h1 class="MainTitle">TO-DO LIST</h1>
         <i class="fa-solid fa-bars MenuButton" onclick="SideMenuShow()"></i>
     </div>
-
-    <div class="ColumnSection">
-        <div class="ColumnList">
-            <div class="ColumnHead">
-                <div class="ColumnTitle">해야할 일<span class="CardCount">2</span></div>
-                <div class="ButtonGroup">
-                    <i class="fa-solid fa-plus" onclick="RegisterFormShow(this)"></i>
-                    <i class="fa-solid fa-xmark"></i>
-                </div>
-            </div>
-            <div class="NewCard">
-                <div class="CardTitle"><input type="text" placeholder="제목을 입력하세요" class="TitleInput"></input></div>
-                <div class="CardBody"><textarea type="text" placeholder="내용을 입력하세요" maxlength="500" class="CardInput" onkeydown="CardHeightAdjust(this)" onkeyup="CardHeightAdjust(this)"></textarea></div>
-                <div class="CardButton"><button class="CardCancel" onclick="RegisterFormShow(this)">취소</button><button class="CardRegister" disabled="false" onclick="CardMaking(this)">등록</button></div>
-            </div>
-            <div class="CardSection">
-                <div class="ColumnCards" draggable="true" ondblclick="CardModifying(this)">
-                    <div class="CardTitle">Github 공부하기<i class="fa-solid fa-xmark" onclick="ModalAlert(this)"></i></div>
-                    <div class="CardBody">add, commit, push</div>
-                    <div class="CardAuthor">author by web</div>
-                </div>
-                <div class="ColumnCards" draggable="true" ondblclick="CardModifying(this)">
-                    <div class="CardTitle">블로그에 포스팅할 것<i class="fa-solid fa-xmark" onclick="ModalAlert(this)"></i></div>
-                    <div class="CardBody">* GitHub 공부내용<br>* 모던 자바스크립트 1장 공부내용</div>
-                    <div class="CardAuthor">author by web</div>
-                </div>
-            </div>
-        </div>
-        <div class="ColumnList">
-            <div class="ColumnHead">
-                <div class="ColumnTitle">하고있는 일<span class="CardCount">1</span></div>
-                <div class="ButtonGroup">
-                    <i class="fa-solid fa-plus" onclick="RegisterFormShow(this)"></i>
-                    <i class="fa-solid fa-xmark"></i>
-                </div>
-            </div>
-            <div class="NewCard">
-                <div class="CardTitle"><input type="text" placeholder="제목을 입력하세요" class="TitleInput"></input></div>
-                <div class="CardBody"><textarea type="text" placeholder="내용을 입력하세요" maxlength="500" class="CardInput" onkeydown="CardHeightAdjust(this)" onkeyup="CardHeightAdjust(this)"></textarea></div>
-                <div class="CardButton"><button class="CardCancel" onclick="RegisterFormShow(this)">취소</button><button class="CardRegister" disabled="false" onclick="CardMaking(this)">등록</button></div>
-            </div>
-            <div class="CardSection">
-                <div class="ColumnCards" draggable="true" ondblclick="CardModifying(this)">
-                    <div class="CardTitle">Github 공부하기<i class="fa-solid fa-xmark" onclick="ModalAlert(this)"></i></div>
-                    <div class="CardBody">add, commit, push</div>
-                    <div class="CardAuthor">author by web</div>
-                </div>
-            </div>
-        </div>
-        <div class="ColumnList">
-            <div class="ColumnHead">
-                <div class="ColumnTitle">완료한 일<span class="CardCount">0</span></div>
-                <div class="ButtonGroup">
-                    <i class="fa-solid fa-plus" onclick="RegisterFormShow(this)"></i>
-                    <i class="fa-solid fa-xmark"></i>
-                </div>
-            </div>
-            <div class="NewCard">
-                <div class="CardTitle"><input type="text" placeholder="제목을 입력하세요" class="TitleInput"></input></div>
-                <div class="CardBody"><textarea type="text" placeholder="내용을 입력하세요" maxlength="500" class="CardInput" onkeydown="CardHeightAdjust(this)" onkeyup="CardHeightAdjust(this)"></textarea></div>
-                <div class="CardButton"><button class="CardCancel" onclick="RegisterFormShow(this)">취소</button><button class="CardRegister" disabled="false" onclick="CardMaking(this)">등록</button></div>
-            </div>
-            <div class="CardSection">
-            </div>
-        </div>
-    </div>
-
     <div class="SideMenu">
         <div class="MenuHead"><i class="fa-solid fa-xmark" onclick="SideMenuShow()"></i></div>
         <div class="MenuLog">
@@ -130,8 +59,8 @@
             </div>
         </div>
     </div>
-    <script>
-        
-      </script>
+
+    <div class="ColumnSection">
+    </div>
 </body>
 </html>
