Update: Minor fix

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <script src="javascript/sidemenu.js"></script>
     <script src="javascript/init.js"></script>
-    <script src="javascript/columns.js"></script>
     <script defer src="javascript/card.js"></script>
+    <script defer src="javascript/columns.js"></script>
     <script defer src="javascript/modal.js"></script>
     <script defer src="javascript/columns.js"></script>
     <script defer src="javascript/modaldelete.js"></script>
