Update: Log Updated while Side Menu shwon

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 </body>
 
-<script defer type="module" src="javascript/init.js"></script>
-<script defer type="module" src="javascript/sidemenu.js"></script>
+<script type="module" src="javascript/init.js"></script>
+<script type="module" src="javascript/sidemenu.js"></script>
 
 </html>
