Update: Column Add & Delete and Title Change available

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/modal.css" />
     <link rel="stylesheet" href="css/sidemenu.css" />
     <link rel="stylesheet" href="css/title.css" />
+    <link rel="stylesheet" href="css/fab.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400&display=swap" rel="stylesheet">
@@ -26,16 +27,18 @@
         <h1 class="MainTitle">TO-DO LIST</h1>
         <i class="fa-solid fa-bars MenuButton"></i>
     </div>
+    <div class="ColumnSection">
+    </div>
+    <div class="FabButton FabColumn"><i class="fa-solid fa-plus fa-2x"></i></div>
     <div class="SideMenu">
         <div class="MenuHead"><i class="fa-solid fa-xmark MenuButton"></i></div>
         <div class="MenuLog">
         </div>
     </div>
-    <div class="ColumnSection">
-    </div>
 </body>
 
 <script type="module" src="javascript/init.js"></script>
 <script type="module" src="javascript/sidemenu.js"></script>
+<script type="module" src="javascript/columns.js"></script>
 
 </html>
