Update: Drag&Drop incompletely available

--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
 <script type="module" src="javascript/init.js"></script>
 <script type="module" src="javascript/sidemenu.js"></script>
 <script type="module" src="javascript/columns.js"></script>
+<script type="module" src="javascript/dragndrop.js"></script>
 
 </html>
