Update: Column making, modifying, and delete available

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 </body>
 
-<script type="module" src="javascript/init.js"></script>
+<script type="module" src="javascript/main.js"></script>
 <script type="module" src="javascript/sidemenu.js"></script>
 <script type="module" src="javascript/columns.js"></script>
 <script type="module" src="javascript/dragndrop.js"></script>
