Update: Darkmode available

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/sidemenu.css" />
     <link rel="stylesheet" href="css/title.css" />
     <link rel="stylesheet" href="css/fab.css" />
+    <link rel="stylesheet" href="css/dark.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -33,6 +34,7 @@
   <body>
     <div class="TitleSection">
       <h1 class="MainTitle">TO-DO LIST</h1>
+      <i class="fa-solid fa-moon fa-2x ToggleDark"></i>
       <i class="fa-solid fa-bars MenuButton"></i>
     </div>
     <div class="ColumnSection"></div>
