--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400&display=swap");
     </style>
 
-    <title>TO-DO WEB</title>
+    <title>TO-DO WEB test</title>
 
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/card.css" />
